fixing some rough edges
